Refactor: replace `get` with `getFirst` for similarStyleRuns
This change improves readability and accuracy. The method getFirst is more descriptive, making the code easier to understand. No change in functionality.